--- a/solve.html
+++ b/solve.html
@@ -48,16 +48,12 @@
             <a class="nav-link" href="code.html">Code</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="http://github.com/stuckform"
-              target="_blank"
-              >Github</a
-            >
+          <a class="nav-link" target="_blank" href="https://github.com/stuckform">GitHub</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://" target="_blank"></a>
+          <a class="nav-link" target="_blank" href="https://mattcoppinger.netlify.app/">Portfolio</a>
           </li>
+          </ul>  
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -93,7 +89,7 @@
 
       <div class="row">
         <div class="col-4 offset-6">
-          <p>I will show results</p>
+          <p>Results:</p>
           <br />
           <p id="results"></p>
         </div>
